--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "uwmctools",
   "version": "2.0.0",
   "description": "convert data from unlimitedworld.de, mostly used for some tools on https://lergin.de",
-  "homepage": "https://legin.de/tools/uwmc/player",
+  "homepage": "https://github.com/Lergin/uwmctools",
   "bugs": {
-      "url": "//TODO: GITHUB ISSUE URL"
+      "url": "https://github.com/Lergin/uwmctools/issues"
   },
   "license": "MIT",
   "author": {
@@ -13,8 +13,7 @@
       "url": "Lergin.de"
   },
   "main": "main.js",
-  "repository": "//TODO: GITHUB URL",
-  "private": true,
+  "repository": "Lergin/uwmctools",
   "engines": {
     "node": ">=6.3.0"
   },
