moved src files to src folder and started adding converters

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,11 @@
 {
     "env": {
-        "es6": true,
         "node": true
     },
     "extends": [ "google"],
     "parserOptions": {
-        "sourceType": "script"
+        "sourceType": "script",
+        "ecmaVersion": 8
     },
     "rules": {
         "indent": [
