--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "request": "^2.73.0"
   },
   "devDependencies": {
+    "babel-preset-es2017": "^6.16.0",
     "eslint": "^3.9.0",
     "eslint-config-google": "^0.7.0"
   }
