added main map plot stats

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uwmctools",
-  "version": "2.6.0",
+  "version": "2.7.0",
   "description": "convert data from unlimitedworld.de, mostly used for some tools on https://lergin.de",
   "homepage": "https://github.com/Lergin/uwmctools",
   "bugs": {
@@ -14,7 +14,7 @@
   },
   "main": "lib/main.js",
   "scripts": {
-    "test": "babel src -d lib && node lib/test.js"
+    "test": "babel src -d lib --copy-files && node lib/test.js"
   },
   "repository": "Lergin/uwmctools",
   "engines": {
@@ -25,6 +25,7 @@
     "request": "^2.73.0"
   },
   "devDependencies": {
+    "babel": "^6.5.2",
     "babel-preset-es2017": "^6.16.0",
     "eslint": "^3.9.0",
     "eslint-config-google": "^0.7.0"
