added plotstats view

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ build/Release
 # Dependency directories
 node_modules
 jspm_packages
+bower_components
 
 # Optional npm cache directory
 .npm
@@ -44,3 +45,5 @@ jspm_packages
 .idea
 
 test.js
+
+images
