--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "Uwmc Tools",
   "start_url": "/?homescreen=1",
   "display": "standalone",
-  "theme_color": "#2196F3",
-  "background_color": "#2196F3",
+  "theme_color": "#FF9800",
+  "background_color": "#FF9800",
   "icons": [
     {
       "src": "images/manifest/icon-192x192.png",
