--- a/backend_scripts/package.json
+++ b/backend_scripts/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "babel src -d lib --copy-files && node lib/worldstats_updater.js"
+    "test": "babel src -d lib --copy-files && node lib/playerlist_updater.js"
   },
   "engines": {
     "node": ">=6.3.0"
