--- a/frontend/.htaccess
+++ b/frontend/.htaccess
@@ -8,3 +8,9 @@ RewriteRule ^index\.html$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.html [L]
+
+AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application/javascript text/javascript application/json
+
+<ifModule mod_headers.c>
+    Header set Connection keep-alive
+</ifModule>
