--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -33,6 +33,7 @@
     "math-tex": "mathiasbynens/math-tex#^1.0.0",
     "paper-tabs": "PolymerElements/paper-tabs#^1.7.0",
     "paper-input": "^1.1.22",
-    "paper-datatable-api": "^0.1.20"
+    "paper-datatable-api": "^0.1.20",
+    "paper-tooltip": "^1.1.3"
   }
 }
