--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -34,6 +34,8 @@
     "paper-tabs": "PolymerElements/paper-tabs#^1.7.0",
     "paper-input": "^1.1.22",
     "paper-datatable-api": "^0.1.20",
-    "paper-tooltip": "^1.1.3"
+    "paper-tooltip": "^1.1.3",
+    "paper-listbox": "^1.1.2",
+    "paper-dialog": "^1.1.0"
   }
 }
