--- a/backend/src/config.json
+++ b/backend/src/config.json
@@ -47,6 +47,14 @@
             "z2": -2000,
             "x1": 4000,
             "x2": 2000
+        },
+        {
+            "label": "Nord-Osten",
+            "id": "north-east",
+            "z1": -2000,
+            "z2": -4000,
+            "x1": 4000,
+            "x2": 2000
         }
     ]
 }
