--- a/backend_scripts/package.json
+++ b/backend_scripts/package.json
@@ -1,11 +1,16 @@
 {
   "main": "index.js",
+  "scripts": {
+    "start": "tsc && node build/main.js",
+    "deploy": "tsc && node deploy.js"
+  },
   "dependencies": {
     "firebase-admin": "^5.9.1",
     "lergins-bot-framework": "^1.3.3",
     "uwmctools": "^2.8.2"
   },
   "devDependencies": {
+    "sftp-upload": "^1.0.0",
     "typescript": "^2.7.2"
   }
 }
