--- a/backend/src/config.json
+++ b/backend/src/config.json
@@ -49,6 +49,14 @@
             "x2": 2000
         },
         {
+            "label": "Westen",
+            "id": "west",
+            "z1": 4000,
+            "z2": 2000,
+            "x1": -4000,
+            "x2": 4000
+        },
+        {
             "label": "Nord-Osten",
             "id": "north-east",
             "z1": -2000,
