--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uwmctools",
-  "version": "2.8.3",
+  "version": "2.8.5",
   "description": "convert data from unlimitedworld.de, mostly used for the tools on https://uwmc.lergin.de",
   "homepage": "https://github.com/Lergin/uwmctools",
   "bugs": {
@@ -12,9 +12,10 @@
     "email": "lergin@gmx.de",
     "url": "Lergin.de"
   },
-  "main": "lib/main.js",
+  "main": "src/main.js",
   "scripts": {
-    "build": "babel src -d lib --copy-files"
+    "build": "babel src -d lib --copy-files",
+    "test": "babel src -d lib --copy-files && node lib/test.js"
   },
   "repository": "Lergin/uwmctools",
   "engines": {
